lots of changes

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,5 +1,197 @@
 
-article {Allendorf:09,
+
+@article{jennings:05,
+  title={Speciational history of Australian grass finches (Poephila) inferred from thirty gene trees},
+  author={Jennings, W Bryan and Edwards, Scott V},
+  journal={Evolution},
+  volume={59},
+  number={9},
+  pages={2033--2047},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+
+
+
+@article{paaby:14,
+  title={A highly pleiotropic amino acid polymorphism in the Drosophila insulin receptor contributes to life-history adaptation},
+  author={Paaby, Annalise B and Bergland, Alan O and Behrman, Emily L and Schmidt, Paul S},
+  journal={Evolution},
+  volume={68},
+  number={12},
+  pages={3395--3409},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+
+@article{wright:46,
+  title={Genetics of natural populations. XII. Experimental reproduction of some of the changes caused by natural selection in certain populations of Drosophila pseudoobscura},
+  author={Wright, Sewall and Dobzhansky, Theodosius},
+  journal={Genetics},
+  volume={31},
+  number={2},
+  pages={125},
+  year={1946},
+  publisher={Genetics Society of America}
+}
+
+
+@article{richards:00,
+  title={Inbreeding depression and genetic rescue in a plant metapopulation},
+  author={Richards, Christopher M},
+  journal={The American Naturalist},
+  volume={155},
+  number={3},
+  pages={383--394},
+  year={2000},
+  publisher={The University of Chicago Press}
+}
+
+
+
+@article{Haldane:37,
+author = {Haldane, J. B. S.},
+title = {The Effect of Variation of Fitness},
+journal = {The American Naturalist},
+volume = {71},
+number = {735},
+pages = {337-349},
+year = {1937},
+doi = {10.1086/280722},
+
+URL = { 
+        https://doi.org/10.1086/280722
+    
+},
+eprint = { 
+        https://doi.org/10.1086/280722
+    
+}
+,
+    abstract = { In a species in equilibrium variation is mainly due to two causes. Some deleterious genes are being weeded out by selection at the same rate as they are produced by mutation. Others are preserved because the heterozygous form is fitter than either homozygote. In the former case the loss of fitness in the species is roughly equal to the sum of all mutation rates and is probably of the order of 5 per cent. It is suggested that this loss of fitness is the price paid by a species for its capacity for further evolution. }
+}
+
+
+
+
+@article{darwin:1876,
+  title={The effect of cross and self fertilization in the vegetable kingdom: Murray},
+  author={Darwin, Charles},
+  journal={London, UK},
+  year={1876}
+}
+
+
+@article{lek:16,
+  title={Analysis of protein-coding genetic variation in 60,706 humans},
+  author={Lek, Monkol and Karczewski, Konrad J and Minikel, Eric V and Samocha, Kaitlin E and Banks, Eric and Fennell, Timothy and O’Donnell-Luria, Anne H and Ware, James S and Hill, Andrew J and Cummings, Beryl B and others},
+  journal={Nature},
+  volume={536},
+  number={7616},
+  pages={285},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+
+
+@article{macarthur:12,
+  title={A systematic survey of loss-of-function variants in human protein-coding genes},
+  author={MacArthur, Daniel G and Balasubramanian, Suganthi and Frankish, Adam and Huang, Ni and Morris, James and Walter, Klaudia and Jostins, Luke and Habegger, Lukas and Pickrell, Joseph K and Montgomery, Stephen B and others},
+  journal={Science},
+  volume={335},
+  number={6070},
+  pages={823--828},
+  year={2012},
+  publisher={American Association for the Advancement of Science}
+}
+
+
+@article{francioli:14,
+  title={Whole-genome sequence variation, population structure and demographic history of the Dutch population},
+  author={Francioli, Laurent C and Menelaou, Androniki and Pulit, Sara L and Van Dijk, Freerk and Palamara, Pier Francesco and Elbers, Clara C and Neerincx, Pieter BT and Ye, Kai and Guryev, Victor and Kloosterman, Wigard P and others},
+  journal={Nature genetics},
+  volume={46},
+  number={8},
+  pages={818},
+  year={2014},
+  publisher={Nature Publishing Group}
+}
+
+
+@article{Toews:16,
+title = "Plumage Genes and Little Else Distinguish the Genomes of Hybridizing Warblers",
+journal = "Current Biology",
+volume = "26",
+number = "17",
+pages = "2313 - 2318",
+year = "2016",
+issn = "0960-9822",
+doi = "https://doi.org/10.1016/j.cub.2016.06.034",
+url = "http://www.sciencedirect.com/science/article/pii/S096098221630673X",
+author = "David P.L. Toews and Scott A. Taylor and Rachel Vallender and Alan Brelsford and Bronwyn G. Butcher and Philipp W. Messer and Irby J. Lovette"
+}
+
+
+%Crew B. (2013). In North American katydids, green isn’t the dominant colour, pink is. Scientific American Blog Network. (3 September 2015).
+@Misc{Crew:13,
+  OPTkey = 	 {}, 
+  OPTauthor = 	 {Crew, B.},
+  title = 	 {In North American katydids, green isn’t the dominant colour, pink is.},
+  howpublished = {Scientific American Blog Network.},
+ URL = {https://blogs.scientificamerican.com/running-ponies/in-north-american-katydids-green-isne28099t-the-dominant-colour-pink-is/},
+  OPTmonth = 	 {},
+  year = 	 {2013},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
+@article{Wheeler:07,
+ ISSN = {00030147, 15375323},
+ URL = {http://www.jstor.org/stable/2454781},
+ author = {William Morton Wheeler},
+ journal = {The American Naturalist},
+ number = {492},
+ pages = {773--780},
+ publisher = {[University of Chicago Press, American Society of Naturalists]},
+ title = {Pink Insect Mutants},
+ volume = {41},
+ year = {1907}
+}
+
+
+
+
+@article {Barrett:08,
+	author = {Barrett, Rowan D. H. and Rogers, Sean M. and Schluter, Dolph},
+	title = {Natural Selection on a Major Armor Gene in Threespine Stickleback},
+	volume = {322},
+	number = {5899},
+	pages = {255--257},
+	year = {2008},
+	doi = {10.1126/science.1159978},
+	publisher = {American Association for the Advancement of Science},
+	abstract = {Experimental estimates of the effects of selection on genes determining adaptive traits add to our understanding of the mechanisms of evolution. We measured selection on genotypes of the Ectodysplasin locus, which underlie differences in lateral plates in threespine stickleback fish. A derived allele (low) causing reduced plate number has been fixed repeatedly after marine stickleback colonized freshwater from the sea, where the ancestral allele (complete) predominates. We transplanted marine sticklebacks carrying both alleles to freshwater ponds and tracked genotype frequencies over a generation. The low allele increased in frequency once lateral plates developed, most likely via a growth advantage. Opposing selection at the larval stage and changing dominance for fitness throughout life suggest either that the gene affects additional traits undergoing selection or that linked loci also are affecting fitness.},
+	issn = {0036-8075},
+	URL = {http://science.sciencemag.org/content/322/5899/255},
+	eprint = {http://science.sciencemag.org/content/322/5899/255.full.pdf},
+	journal = {Science}
+}
+
+
+@article{houde:94,
+  title={Effect of artificial selection on male colour patterns on mating preference of female guppies},
+  author={Houde, Anne E},
+  journal={Proc. R. Soc. Lond. B},
+  volume={256},
+  number={1346},
+  pages={125--130},
+  year={1994},
+  publisher={The Royal Society}
+}
+
+
+@article {Allendorf:09,
 	author = {Allendorf, Fred W. and Hard, Jeffrey J.},
 	title = {Human-induced evolution caused by unnatural selection through harvest of wild animals},
 	volume = {106},
