--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,88 @@
+
+@incollection{box:79,
+  title={Robustness in the strategy of scientific model building},
+  author={Box, George EP},
+  booktitle={Robustness in statistics},
+  pages={201--236},
+  year={1979},
+  publisher={Elsevier}
+}
+
+@article{Meredith:09,
+    author = {Meredith, Robert W. AND Gatesy, John AND Murphy, William J. AND Ryder, Oliver A. AND Springer, Mark S.},
+    journal = {PLOS Genetics},
+    publisher = {Public Library of Science},
+    title = {Molecular Decay of the Tooth Gene Enamelin (ENAM) Mirrors the Loss of Enamel in the Fossil Record of Placental Mammals},
+    year = {2009},
+    month = {09},
+    volume = {5},
+    url = {https://doi.org/10.1371/journal.pgen.1000634},
+    pages = {1-12},
+    abstract = {Author Summary Enamel is the hardest substance in the vertebrate body. One of the key proteins involved in enamel formation is enamelin. Most placental mammals have teeth that are capped with enamel, but there are also lineages without teeth (anteaters, pangolins, baleen whales) or with enamelless teeth (armadillos, sloths, aardvarks, pygmy and dwarf sperm whales). All toothless and enamelless mammals are descended from ancestral forms that possessed teeth with enamel. Given this ancestry, we predicted that mammalian species without teeth or with teeth that lack enamel would have copies of the gene that codes for the enamelin protein, but that the enamelin gene in these species would contain mutations that render it a nonfunctional pseudogene. To test this hypothesis, we sequenced most of the protein-coding region of the enamelin gene in all groups of placental mammals that lack teeth or have enamelless teeth. In every case, we discovered mutations in the enamelin gene that disrupt the proper reading frame that codes for the enamelin protein. Our results link evolutionary change at the molecular level to morphological change in the fossil record and also provide evidence for the enormous predictive power of Charles Darwin's theory of descent with modification.},
+    number = {9},
+    doi = {10.1371/journal.pgen.1000634}
+}
+
+@article {Wright:05,
+	author = {Wright, Stephen I. and Bi, Irie Vroh and Schroeder, Steve G. and Yamasaki, Masanori and Doebley, John F. and McMullen, Michael D. and Gaut, Brandon S.},
+	title = {The Effects of Artificial Selection on the Maize Genome},
+	volume = {308},
+	number = {5726},
+	pages = {1310--1314},
+	year = {2005},
+	doi = {10.1126/science.1107891},
+	publisher = {American Association for the Advancement of Science},
+	abstract = {Domestication promotes rapid phenotypic evolution through artificial selection. We investigated the genetic history by which the wild grass teosinte (Zea mays ssp. parviglumis) was domesticated into modern maize (Z. mays ssp. mays). Analysis of single-nucleotide polymorphisms in 774 genes indicates that 2 to 4\% of these genes experienced artificial selection. The remaining genes retain evidence of a population bottleneck associated with domestication. Candidate selected genes with putative function in plant growth are clustered near quantitative trait loci that contribute to phenotypic differences between maize and teosinte. If we assume that our sample of genes is representative, \~{}1200 genes throughout the maize genome have been affected by artificial selection.},
+	issn = {0036-8075},
+	URL = {http://science.sciencemag.org/content/308/5726/1310},
+	eprint = {http://science.sciencemag.org/content/308/5726/1310.full.pdf},
+	journal = {Science}
+}
+
+
+@article{Hudson:15,
+    author = {Hudson, Richard R.},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {A New Proof of the Expected Frequency Spectrum under the Standard Neutral Model},
+    year = {2015},
+    month = {07},
+    volume = {10},
+    url = {https://doi.org/10.1371/journal.pone.0118087},
+    pages = {1-5},
+    number = {7},
+    doi = {10.1371/journal.pone.0118087}
+
+
+@article{Sankararaman:12,
+    author = {Sankararaman, Sriram AND Patterson, Nick AND Li, Heng AND Pääbo, Svante AND Reich, David},
+    journal = {PLOS Genetics},
+    publisher = {Public Library of Science},
+    title = {The Date of Interbreeding between Neandertals and Modern Humans},
+    year = {2012},
+    month = {10},
+    volume = {8},
+    url = {https://doi.org/10.1371/journal.pgen.1002947},
+    pages = {1-9},
+    number = {10},
+    doi = {10.1371/journal.pgen.1002947}
+}
+
+@article{Laurie:07,
+    author = {Laurie, Cathy C AND Nickerson, Deborah A AND Anderson, Amy D AND Weir, Bruce S AND Livingston, Robert J AND Dean, Matthew D AND Smith, Kimberly L AND Schadt, Eric E AND Nachman, Michael W},
+    journal = {PLOS Genetics},
+    publisher = {Public Library of Science},
+    title = {Linkage Disequilibrium in Wild Mice},
+    year = {2007},
+    month = {08},
+    volume = {3},
+    url = {https://doi.org/10.1371/journal.pgen.0030144},
+    pages = {1-9},
+    number = {8},
+    doi = {10.1371/journal.pgen.0030144}
+}
+
+
 @article{jennings:05,
   title={Speciational history of Australian grass finches (Poephila) inferred from thirty gene trees},
   author={Jennings, W Bryan and Edwards, Scott V},
