--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -27,8 +27,8 @@
 \renewcommand{\P}{\mathbb{P}}
 \newcommand{\half}{\tfrac{1}{2}}
 
- % \renewcommand\allcapsspacing[1]{{\addfontfeature{LetterSpace=15}#1}}
- % \renewcommand\smallcapsspacing[1]{{\addfontfeature{LetterSpace=10}#1}}
+ \renewcommand\allcapsspacing[1]{{\addfontfeature{LetterSpace=15}#1}}
+  \renewcommand\smallcapsspacing[1]{{\addfontfeature{LetterSpace=10}#1}}
 
 
 %\usepackage[colorlinks=true, allcolors=black]{hyperref}
@@ -39,14 +39,14 @@
 \newcommand{\fit}{F_{\mathrm{IT}}}
 \newcommand{\fst}{F_{\mathrm{ST}}}
 \newcommand{\Wbar}{\overline{W}}
-
+\newcommand{\dNdS}{\nicefrac{d_N}{d_S}}
 \usepackage[colorinlistoftodos]{todonotes}  %disable
 \newcommand{\graham}[1]{\todo[size=\scriptsize, color=red!50]{#1}}
 
 %\newcounter{Question}[section]
 %\setcounter{Question}{1}
 
-\newcounter{question}[section]   %%modified from https://www.sharelatex.com/learn/Counters
+\newcounter{question}[chapter]  %[section]   %%modified from https://www.sharelatex.com/learn/Counters
 
 \newenvironment{question}[1][]{\refstepcounter{question}\par\medskip
    \textbf{Question~\thequestion. #1} \rmfamily}{\medskip} 
