--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,14 @@
+@article{algee:16,
+  title={Individual identifiability predicts population identifiability in forensic microsatellite markers},
+  author={Algee-Hewitt, Bridget FB and Edge, Michael D and Kim, Jaehee and Li, Jun Z and Rosenberg, Noah A},
+  journal={Current Biology},
+  volume={26},
+  number={7},
+  pages={935--942},
+  year={2016},
+  publisher={Elsevier}
+}
+
 
 @incollection{box:79,
   title={Robustness in the strategy of scientific model building},
@@ -52,7 +63,7 @@
     pages = {1-5},
     number = {7},
     doi = {10.1371/journal.pone.0118087}
-
+}
 
 @article{Sankararaman:12,
     author = {Sankararaman, Sriram AND Patterson, Nick AND Li, Heng AND Pääbo, Svante AND Reich, David},
