--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,49 @@
+
+@article{lewontin:94,
+author = "Lewontin, R. C.",
+doi = "10.1214/ss/1177010492",
+fjournal = "Statistical Science",
+journal = "Statist. Sci.",
+month = "05",
+number = "2",
+pages = "259--262",
+publisher = "The Institute of Mathematical Statistics",
+title = "[DNA Fingerprinting: A Review of the Controversy]: Comment: The Use of DNA Profiles in Forensic Contexts",
+url = "https://doi.org/10.1214/ss/1177010492",
+volume = "9",
+year = "1994"
+}
+
+
+@article{chen:16,
+title = "Genomic Consequences of Population Decline in the Endangered Florida Scrub-Jay",
+journal = "Current Biology",
+volume = "26",
+number = "21",
+pages = "2974 - 2979",
+year = "2016",
+issn = "0960-9822",
+doi = "https://doi.org/10.1016/j.cub.2016.08.062",
+url = "http://www.sciencedirect.com/science/article/pii/S0960982216310077",
+author = "Nancy Chen and Elissa J. Cosgrove and Reed Bowman and John W. Fitzpatrick and Andrew G. Clark",
+keywords = "habitat fragmentation, gene flow, inbreeding depression, population genetics, conservation genomics"
+}
+
+@article{Aguillon:17,
+    author = {Aguillon, Stepfanie M. AND Fitzpatrick, John W. AND Bowman, Reed AND Schoech, Stephan J. AND Clark, Andrew G. AND Coop, Graham AND Chen, Nancy},
+    journal = {PLOS Genetics},
+    publisher = {Public Library of Science},
+    title = {Deconstructing isolation-by-distance: The genomic consequences of limited dispersal},
+    year = {2017},
+    month = {08},
+    volume = {13},
+    url = {https://doi.org/10.1371/journal.pgen.1006911},
+    pages = {1-27},
+    abstract = {Author summary Dispersal is a fundamental component of the life history of most organisms and therefore influences many biological processes. Dispersal is particularly important in creating genetic structure on the landscape. We often observe a pattern of decreased genetic relatedness between individuals as geographic distances increases, or isolation-by-distance. This pattern is particularly pronounced in organisms with extremely short dispersal distances. Despite the ubiquity of isolation-by-distance patterns in nature, there are few examples that explicitly demonstrate how limited dispersal influences spatial genetic structure. Here we investigate the processes that result in spatial genetic structure using the Florida Scrub-Jay, a bird with extremely limited dispersal behavior and extensive genome-wide data. We take advantage of the long-term monitoring of a contiguous population of Florida Scrub-Jays, which has resulted in a detailed pedigree and measurements of dispersal for hundreds of individuals. We show how limited dispersal results in close genealogical relatives living closer together geographically, which generates a strong pattern of isolation-by-distance at an extremely small spatial scale (<10 km) in just a few generations. Given the detailed dispersal, pedigree, and genomic data, we can achieve a fairly complete understanding of how dispersal shapes patterns of genetic diversity over short spatial scales.},
+    number = {8},
+    doi = {10.1371/journal.pgen.1006911}
+}
+
 @article{algee:16,
   title={Individual identifiability predicts population identifiability in forensic microsatellite markers},
   author={Algee-Hewitt, Bridget FB and Edge, Michael D and Kim, Jaehee and Li, Jun Z and Rosenberg, Noah A},
