--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -20,6 +20,9 @@
 %\hypersetup{colorlinks=true, urlcolor=blue, citecolor=black, linkcolor=black}
 %\usepackage[normalem]{ulem}
 \usepackage{tcolorbox}
+
+\newcommand{\ec}[1]{{\em \color{blue} #1}}
+
 \newcommand{\gc}[1]{{\em \color{green} #1}}
 \newcommand{\sa}[1]{{\color{black} #1}}
 \newcommand{\plr}[1]{{\em \color{green} (#1)}}
@@ -42,6 +45,8 @@
 \newcommand{\dNdS}{\nicefrac{d_N}{d_S}}
 \usepackage[colorinlistoftodos]{todonotes}  %disable
 \newcommand{\graham}[1]{\todo[size=\scriptsize, color=red!50]{#1}}
+
+\newcommand{\erin}[1]{\todo[size=\scriptsize, color=blue!50]{#1}}
 
 %\newcounter{Question}[section]
 %\setcounter{Question}{1}
@@ -73,7 +78,7 @@
 
 \begin{document}
 
-\title{Population Genetics}
+\title{Population and Quantitative Genetics}
 \author{Graham Coop}
 %  \small $^1$ Department of Evolution and Ecology \& Center for Population Biology,\\
 %  \small University of California, Davis.\\
