Update on Overleaf.

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -31,8 +31,8 @@
 \newcommand{\half}{\tfrac{1}{2}}
 
 % \renewcommand\allcapsspacing[1]{{\addfontfeature{LetterSpace=15}#1}}
-%
-\renewcommand\smallcapsspacing[1]{{\addfontfeature{LetterSpace=10}#1}}
+
+%\renewcommand\smallcapsspacing[1]{{\addfontfeature{LetterSpace=10}#1}}
 
 
 %\usepackage[colorlinks=true, allcolors=black]{hyperref}
@@ -55,7 +55,7 @@
 \newcounter{question}[chapter]  %[section]   %%modified from https://www.sharelatex.com/learn/Counters
 
 \newenvironment{question}[1][]{\refstepcounter{question}\par\medskip
-   \textbf{Question~\thequestion. #1} \rmfamily}{\medskip} 
+  \textbf{Question~\thequestion. #1} \rmfamily}{\medskip} 
 
 %\newenvironment{question}[1][]{\refstepcounter{question}\par   \begin{tcolorbox}
  %   \medskip \textbf{Question~\thequestion. #1}\rmfamily}{\medskip} \end{tcolorbox}
