Update on Overleaf.

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -2,6 +2,7 @@
 % make site deploy
 %\documentclass[12pt,titlepage]{article}
 \documentclass{tufte-book}
+\usepackage{url}
 %\usepackage[authoryear]{natbib}
 \bibliographystyle{genetics}
 \usepackage{amsfonts}
