added 1st cousin

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,14 @@
+
+@article{vonHoldt:11,
+author = {vonHoldt, Bridgett M. and Pollinger, John P. and Earl, Dent A. and Knowles, James C. and Boyko, Adam R. and Parker, Heidi and Geffen, Eli and Pilot, Malgorzata and Jedrzejewski, Wlodzimierz and Jedrzejewska, Bogumila and Sidorovich, Vadim and Greco, Claudia and Randi, Ettore and Musiani, Marco and Kays, Roland and Bustamante, Carlos D. and Ostrander, Elaine A. and Novembre, John and Wayne, Robert K.}, 
+title = {A genome-wide perspective on the evolutionary history of enigmatic wolf-like canids},
+year = {2011}, 
+doi = {10.1101/gr.116301.110}, 
+URL = {http://genome.cshlp.org/content/early/2011/05/12/gr.116301.110.abstract}, 
+eprint = {http://genome.cshlp.org/content/early/2011/05/12/gr.116301.110.full.pdf+html}, 
+journal = {Genome Research} 
+}
+
 @article{lewontin:94,
 author = "Lewontin, R. C.",
 doi = "10.1214/ss/1177010492",
