added 1st cousin

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,15 @@
+@article{becquet:07,
+  title={Genetic structure of chimpanzee populations},
+  author={Becquet, Celine and Patterson, Nick and Stone, Anne C and Przeworski, Molly and Reich, David},
+  journal={PLoS genetics},
+  volume={3},
+  number={4},
+  pages={e66},
+  year={2007},
+  publisher={Public Library of Science}
+}
+
+
 @article{vonHoldt:11,
 author = {vonHoldt, Bridgett M. and Pollinger, John P. and Earl, Dent A. and Knowles, James C. and Boyko, Adam R. and Parker, Heidi and Geffen, Eli and Pilot, Malgorzata and Jedrzejewski, Wlodzimierz and Jedrzejewska, Bogumila and Sidorovich, Vadim and Greco, Claudia and Randi, Ettore and Musiani, Marco and Kays, Roland and Bustamante, Carlos D. and Ostrander, Elaine A. and Novembre, John and Wayne, Robert K.}, 
 title = {A genome-wide perspective on the evolutionary history of enigmatic wolf-like canids},
