Update on Overleaf.

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -80,7 +80,7 @@
 
 \begin{document}
 
-\title{Population and Quantitative Genetics}
+\title{Population and\newline Quantitative \newline Genetics}
 \author{Graham Coop}
 %  \small $^1$ Department of Evolution and Ecology \& Center for Population Biology,\\
 %  \small University of California, Davis.\\
