--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,14 @@
+@article{alcaide:14,
+  title={Genomic divergence in a ring species complex},
+  author={Alcaide, Miguel and Scordato, Elizabeth SC and Price, Trevor D and Irwin, Darren E},
+  journal={Nature},
+  volume={511},
+  number={7507},
+  pages={83},
+  year={2014},
+  publisher={Nature Publishing Group}
+}
+
 @article{becquet:07,
   title={Genetic structure of chimpanzee populations},
   author={Becquet, Celine and Patterson, Nick and Stone, Anne C and Przeworski, Molly and Reich, David},
