--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,14 @@
+@article{bradburd:16,
+  title={A spatial framework for understanding population structure and admixture},
+  author={Bradburd, Gideon S and Ralph, Peter L and Coop, Graham M},
+  journal={PLoS genetics},
+  volume={12},
+  number={1},
+  pages={e1005703},
+  year={2016},
+  publisher={Public Library of Science}
+}
+
 @article{alcaide:14,
   title={Genomic divergence in a ring species complex},
   author={Alcaide, Miguel and Scordato, Elizabeth SC and Price, Trevor D and Irwin, Darren E},
