--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,14 @@
+@article{novembre:08,
+  title={Interpreting principal component analyses of spatial population genetic variation},
+  author={Novembre, John and Stephens, Matthew},
+  journal={Nature genetics},
+  volume={40},
+  number={5},
+  pages={646},
+  year={2008},
+  publisher={Nature Publishing Group}
+}
+
 @article{bradburd:16,
   title={A spatial framework for understanding population structure and admixture},
   author={Bradburd, Gideon S and Ralph, Peter L and Coop, Graham M},
