--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,16 @@
+@article {Sams:18,
+	author = {Sams, Aaron J and Boyko, Adam R},
+	title = {Fine-scale resolution and analysis of runs of homozygosity in domestic dogs},
+	year = {2018},
+	doi = {10.1101/315770},
+	publisher = {Cold Spring Harbor Laboratory},
+	abstract = {Inbreeding and consanguinity leave distinct genomic traces, most notably long genomic tracts that are identical by descent and completely homozygous. These runs of homozygosity (ROH) can contribute to inbreeding depression if they contain deleterious variants that are fully or partially recessive. Several lines of evidence have been used to show that long (\&gt; 5 megabase (Mb)) ROH are disproportionately likely to harbor deleterious variation, but the extent to which long versus short tracts contribute to autozygosity at loci known to be deleterious and recessive has not been studied. In domestic dogs, nearly 200 mutations are known to cause recessive diseases, most of which can be efficiently assayed using SNP arrays. By examining genome-wide data from over 200,000 markers, including 150 recessive disease variants, we built high-resolution ROH density maps for nearly 2,500 dogs, recording ROH down to 500 kilobases. We observed over 500 homozygous deleterious recessive genotypes in the panel, 90\% of which overlapped with ROH inferred by GERMLINE. Although most of these genotypes were contained in ROH over 5 Mb in length, 14\% were contained in short (0.5 - 2.5 Mb) tracts, a significant enrichment compared to the genetic background, suggesting that even short tracts are useful for computing inbreeding metrics like the coefficient of inbreeding estimated from ROH (FROH). In our dataset, FROH differed significantly both within and among dog breeds. All breeds harbored some regions of reduced genetic diversity due to drift or selective sweeps, but the degree of inbreeding and the proportion of inbreeding caused by short versus long tracts differed between breeds, reflecting their different population histories. Although only available for a few species, large genome-wide datasets including recessive disease variants hold particular promise not only for disentangling the genetic architecture of inbreeding depression, but also evaluating and improving upon current approaches for detecting ROH.},
+	URL = {https://www.biorxiv.org/content/early/2018/05/07/315770},
+	eprint = {https://www.biorxiv.org/content/early/2018/05/07/315770.full.pdf},
+	journal = {bioRxiv}
+}
+
+
 @article{novembre:08,
   title={Interpreting principal component analyses of spatial population genetic variation},
   author={Novembre, John and Stephens, Matthew},
