added inbreeding loops section

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,14 @@
+@article{alvarez:09,
+  title={The role of inbreeding in the extinction of a European royal dynasty},
+  author={Alvarez, Gonzalo and Ceballos, Francisco C and Quinteiro, Celsa},
+  journal={PLoS One},
+  volume={4},
+  number={4},
+  pages={e5174},
+  year={2009},
+  publisher={Public Library of Science}
+}
+
 @article {Sams:18,
 	author = {Sams, Aaron J and Boyko, Adam R},
 	title = {Fine-scale resolution and analysis of runs of homozygosity in domestic dogs},
