--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,14 @@
+@article{lawson:18,
+  title={A tutorial on how not to over-interpret STRUCTURE and ADMIXTURE bar plots},
+  author={Lawson, Daniel J and Van Dorp, Lucy and Falush, Daniel},
+  journal={Nature communications},
+  volume={9},
+  number={1},
+  pages={3258},
+  year={2018},
+  publisher={Nature Publishing Group}
+}
+
 @article{alvarez:09,
   title={The role of inbreeding in the extinction of a European royal dynasty},
   author={Alvarez, Gonzalo and Ceballos, Francisco C and Quinteiro, Celsa},
