--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,25 @@
+@article{li:08,
+  title={Worldwide human relationships inferred from genome-wide patterns of variation},
+  author={Li, Jun Z and Absher, Devin M and Tang, Hua and Southwick, Audrey M and Casto, Amanda M and Ramachandran, Sohini and Cann, Howard M and Barsh, Gregory S and Feldman, Marcus and Cavalli-Sforza, Luigi L and others},
+  journal={science},
+  volume={319},
+  number={5866},
+  pages={1100--1104},
+  year={2008},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{rosenberg:02,
+  title={Genetic structure of human populations},
+  author={Rosenberg, Noah A and Pritchard, Jonathan K and Weber, James L and Cann, Howard M and Kidd, Kenneth K and Zhivotovsky, Lev A and Feldman, Marcus W},
+  journal={science},
+  volume={298},
+  number={5602},
+  pages={2381--2385},
+  year={2002},
+  publisher={American Association for the Advancement of Science}
+}
+
 @article{lawson:18,
   title={A tutorial on how not to over-interpret STRUCTURE and ADMIXTURE bar plots},
   author={Lawson, Daniel J and Van Dorp, Lucy and Falush, Daniel},
