added neutral refs

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,25 @@
+
+@article{king:69,
+  title={Non-darwinian evolution},
+  author={King, Jack Lester and Jukes, Thomas H},
+  journal={Science},
+  volume={164},
+  number={3881},
+  pages={788--798},
+  year={1969}
+}
+
+@article{kimura:68,
+  title={Evolutionary rate at the molecular level},
+  author={Kimura, Motoo and others},
+  journal={Nature},
+  volume={217},
+  number={5129},
+  pages={624--626},
+  year={1968}
+}
+
+
 @article{li:08,
   title={Worldwide human relationships inferred from genome-wide patterns of variation},
   author={Li, Jun Z and Absher, Devin M and Tang, Hua and Southwick, Audrey M and Casto, Amanda M and Ramachandran, Sohini and Cann, Howard M and Barsh, Gregory S and Feldman, Marcus and Cavalli-Sforza, Luigi L and others},
