--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,4 +1,11 @@
 
+@book{kimura:83,
+  title={The neutral theory of molecular evolution},
+  author={Kimura, Motoo},
+  year={1983},
+  publisher={Cambridge University Press}
+}
+
 @article{king:69,
   title={Non-darwinian evolution},
   author={King, Jack Lester and Jukes, Thomas H},
