--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,4 +1,25 @@
-<<<<<<< HEAD
+@article{janicke:16,
+  title={Darwinian sex roles confirmed across the animal kingdom},
+  author={Janicke, Tim and H{\"a}derer, Ines K and Lajeunesse, Marc J and Anthes, Nils},
+  journal={Science advances},
+  volume={2},
+  number={2},
+  pages={e1500983},
+  year={2016},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{rands:14,
+  title={8.2\% of the human genome is constrained: variation in rates of turnover across functional element classes in the human lineage},
+  author={Rands, Chris M and Meader, Stephen and Ponting, Chris P and Lunter, Gerton},
+  journal={PLoS genetics},
+  volume={10},
+  number={7},
+  pages={e1004525},
+  year={2014},
+  publisher={Public Library of Science}
+}
+
 
 @book{kimura:83,
   title={The neutral theory of molecular evolution},
@@ -7,8 +28,6 @@
   publisher={Cambridge University Press}
 }
 
-=======
->>>>>>> 2a72ecc90d38fa6d07c3e89f4ae0149327c56732
 @article{king:69,
   title={Non-darwinian evolution},
   author={King, Jack Lester and Jukes, Thomas H},
@@ -21,7 +40,7 @@
 
 @article{kimura:68,
   title={Evolutionary rate at the molecular level},
-  author={Kimura, Motoo and others},
+  author={Kimura, Motoo},
   journal={Nature},
   volume={217},
   number={5129},
