--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -31,9 +31,9 @@
 \renewcommand{\P}{\mathbb{P}}
 \newcommand{\half}{\tfrac{1}{2}}
 
-%\renewcommand\allcapsspacing[1]{{\addfontfeature{LetterSpace=15}#1}}
+\renewcommand\allcapsspacing[1]{{\addfontfeature{LetterSpace=15}#1}}
 
-%\renewcommand\smallcapsspacing[1]{{\addfontfeature{LetterSpace=10}#1}}
+\renewcommand\smallcapsspacing[1]{{\addfontfeature{LetterSpace=10}#1}}
 
 
 %\usepackage[colorlinks=true, allcolors=black]{hyperref}
