--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,14 @@
+@article{charlesworth:09,
+  title={Effective population size and patterns of molecular evolution and variation},
+  author={Charlesworth, Brian},
+  journal={Nature Reviews Genetics},
+  volume={10},
+  number={3},
+  pages={195},
+  year={2009},
+  publisher={Nature Publishing Group}
+}
+
 @article{janicke:16,
   title={Darwinian sex roles confirmed across the animal kingdom},
   author={Janicke, Tim and H{\"a}derer, Ines K and Lajeunesse, Marc J and Anthes, Nils},
