--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -24,7 +24,7 @@
 
 \newcommand{\ec}[1]{{\em \color{blue} #1}}
 
-\newcommand{\gc}[1]{{\color{black} #1}}   % color{green} #1}}
+\newcommand{\gc}[1]{{\color{green} #1}}  %\color{black} #1}}   %
 \newcommand{\sa}[1]{{\color{black} #1}}
 \newcommand{\plr}[1]{{\em \color{green} (#1)}}
 \newcommand{\E}{\mathbb{E}}
@@ -47,7 +47,7 @@
 \newcommand{\dNdS}{\nicefrac{d_N}{d_S}}
 
 
-\usepackage[colorinlistoftodos,disable]{todonotes}  %disable
+\usepackage[colorinlistoftodos]{todonotes}  % ,disable
 \newcommand{\graham}[1]{\todo[size=\scriptsize, color=red!50]{#1}}
 
 \newcommand{\erin}[1]{\todo[size=\scriptsize, color=blue!50]{#1}}
