Update on Overleaf.

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -32,8 +32,8 @@
 \newcommand{\half}{\tfrac{1}{2}}
 
 %FOR compiling on xelatex 
-\renewcommand\allcapsspacing[1]{{\addfontfeature{LetterSpace=15}#1}}
-\renewcommand\smallcapsspacing[1]{{\addfontfeature{LetterSpace=10}#1}}
+%\renewcommand\allcapsspacing[1]{{\addfontfeature{LetterSpace=15}#1}}
+%\renewcommand\smallcapsspacing[1]{{\addfontfeature{LetterSpace=10}#1}}
 
 
 %\usepackage[colorlinks=true, allcolors=black]{hyperref}
