Update on Overleaf.

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,25 @@
+@article{kimura1964number,
+  title={The number of alleles that can be maintained in a finite population},
+  author={Kimura, Motoo and Crow, James F},
+  journal={Genetics},
+  volume={49},
+  number={4},
+  pages={725},
+  year={1964},
+  publisher={Genetics Society of America}
+}
+
+@article{voight2005interrogating,
+  title={Interrogating multiple aspects of variation in a full resequencing data set to infer human population size changes},
+  author={Voight, Benjamin F and Adams, Alison M and Frisse, Linda A and Qian, Yudong and Hudson, Richard R and Di Rienzo, Anna},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={102},
+  number={51},
+  pages={18508--18513},
+  year={2005},
+  publisher={National Acad Sciences}
+}
+
 @article{charlesworth:09,
   title={Effective population size and patterns of molecular evolution and variation},
   author={Charlesworth, Brian},
@@ -784,6 +806,17 @@ eprint = {
 
 
 
+@article{dickerson1971structure,
+  title={The structure of cytochromec and the rates of molecular evolution},
+  author={Dickerson, Richard E},
+  journal={Journal of Molecular Evolution},
+  volume={1},
+  number={1},
+  pages={26--45},
+  year={1971},
+  publisher={Springer}
+}
+
 @article{watterson:75,
   title={On the number of segregating sites in genetical models without recombination},
   author={Watterson, GA},
@@ -795,6 +828,58 @@ eprint = {
   publisher={Elsevier}
 }
 
+@article{ohta1973slightly,
+  title={Slightly deleterious mutant substitutions in evolution},
+  author={Ohta, Tomoko},
+  journal={Nature},
+  volume={246},
+  number={5428},
+  pages={96},
+  year={1973},
+  publisher={Nature Publishing Group}
+}
+
+@incollection{zuckerkandl1965evolutionary,
+  title={Evolutionary divergence and convergence in proteins},
+  author={Zuckerkandl, Emile and Pauling, Linus},
+  booktitle={Evolving genes and proteins},
+  pages={97--166},
+  year={1965},
+  publisher={Elsevier}
+}
+
+@article{kimura1974some,
+  title={On some principles governing molecular evolution},
+  author={Kimura, Motoo and Ohta, Tomoko},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={71},
+  number={7},
+  pages={2848--2852},
+  year={1974},
+  publisher={National Acad Sciences}
+}
+
+@article{ohta1996development,
+  title={Development of neutral and nearly neutral theories},
+  author={Ohta, Tomoko and Gillespie, John H},
+  journal={Theoretical population biology},
+  volume={49},
+  number={2},
+  pages={128--142},
+  year={1996},
+  publisher={Elsevier}
+}
+
+@article{ewens2016motoo,
+  title={Motoo Kimura and James Crow on the Infinitely Many Alleles Model},
+  author={Ewens, Warren J},
+  journal={Genetics},
+  volume={202},
+  number={4},
+  pages={1243--1245},
+  year={2016},
+  publisher={Genetics Soc America}
+}
 
 @phdthesis{cotterman:40,
   title={A calculus for statistico-genetics},
