editing genetic drift chapter

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,18 @@
+
+@book{darwin1859,
+
+  address = {London},
+  author = {Darwin, Charles},
+  keywords = {evolution},
+  note = { or the Preservation of Favored Races in the Struggle for Life},
+  publisher = {Murray},
+  title = {On the Origin of Species by Means of Natural Selection},
+  year = 1859
+}
+
+
+
+
 @article{kimura1964number,
   title={The number of alleles that can be maintained in a finite population},
   author={Kimura, Motoo and Crow, James F},
