editing genetic drift chapter

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -32,9 +32,9 @@
 \newcommand{\half}{\tfrac{1}{2}}
 
 %FOR compiling on xelatex 
-\renewcommand\allcapsspacing[1]{{\addfontfeature{LetterSpace=15}#1}}
-\renewcommand\smallcapsspacing[1]{{\addfontfeature{LetterSpace=10}#1}}
-\usepackage[colorinlistoftodos  ,disable]{todonotes}  % ,disable
+%\renewcommand\allcapsspacing[1]{{\addfontfeature{LetterSpace=15}#1}}
+%\renewcommand\smallcapsspacing[1]{{\addfontfeature{LetterSpace=10}#1}}
+\usepackage[colorinlistoftodos]{todonotes}  % ,disable  ,disable
 
 
 %\usepackage[colorlinks=true, allcolors=black]{hyperref}
